fix: correct AnalysisSummary attribute names in demo notebook
- Changed state_count to num_states to match actual API

--- a/notebooks/demo_inference.ipynb
+++ b/notebooks/demo_inference.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample sequence (first 50 symbols):\n",
+      "10000101010000010001010010100101000100001010101010\n",
+      "\n",
+      "Notice: no '11' patterns!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a Golden Mean source\n",
     "golden_mean = GoldenMeanSource(p=0.5, _seed=42)\n",
@@ -60,16 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRUE Golden Mean Machine ===\n",
+      "States: 2\n",
+      "Statistical Complexity (Cμ): 0.9183 bits\n",
+      "Entropy Rate (hμ): 0.6667 bits/symbol\n",
+      "Excess Entropy (E): 0.9183 bits\n"
+     ]
+    }
+   ],
    "source": [
     "# Analyze the TRUE machine\n",
     "true_machine = golden_mean.true_machine\n",
     "true_summary = analyze(true_machine)\n",
     "\n",
     "print(\"=== TRUE Golden Mean Machine ===\")\n",
-    "print(f\"States: {true_summary.state_count}\")\n",
+    "print(f\"States: {true_summary.num_states}\")\n",
     "print(f\"Statistical Complexity (Cμ): {true_summary.statistical_complexity:.4f} bits\")\n",
     "print(f\"Entropy Rate (hμ): {true_summary.entropy_rate:.4f} bits/symbol\")\n",
     "print(f\"Excess Entropy (E): {true_summary.excess_entropy:.4f} bits\")"
@@ -77,9 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inferred machine has 5 states\n",
+      "Training sequence length: 10000\n",
+      "Converged: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Infer the machine from a sequence using CSSR\n",
     "config = CSSRConfig(max_history=5, significance=0.05, min_count=10)\n",
@@ -100,9 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Comparison: True vs Inferred ===\n",
+      "Metric                          True   Inferred\n",
+      "-----------------------------------------------\n",
+      "States                             2          5\n",
+      "Statistical Complexity        0.9183     2.3219\n",
+      "Entropy Rate                  0.6667     0.7833\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare true vs inferred\n",
     "inferred_summary = analyze(inferred_machine)\n",
@@ -110,9 +157,13 @@
     "print(\"\\n=== Comparison: True vs Inferred ===\")\n",
     "print(f\"{'Metric':<25} {'True':>10} {'Inferred':>10}\")\n",
     "print(\"-\" * 47)\n",
-    "print(f\"{'States':<25} {true_summary.state_count:>10} {inferred_summary.state_count:>10}\")\n",
-    "print(f\"{'Statistical Complexity':<25} {true_summary.statistical_complexity:>10.4f} {inferred_summary.statistical_complexity:>10.4f}\")\n",
-    "print(f\"{'Entropy Rate':<25} {true_summary.entropy_rate:>10.4f} {inferred_summary.entropy_rate:>10.4f}\")"
+    "print(f\"{'States':<25} {true_summary.num_states:>10} {inferred_summary.num_states:>10}\")\n",
+    "print(\n",
+    "    f\"{'Statistical Complexity':<25} {true_summary.statistical_complexity:>10.4f} {inferred_summary.statistical_complexity:>10.4f}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"{'Entropy Rate':<25} {true_summary.entropy_rate:>10.4f} {inferred_summary.entropy_rate:>10.4f}\"\n",
+    ")"
    ]
   },
   {
@@ -141,7 +192,7 @@
     "print(\"\".join(str(s) for s in sample))\n",
     "\n",
     "# Count runs of 1s to verify\n",
-    "runs = \"\".join(str(s) for s in sample).split('0')\n",
+    "runs = \"\".join(str(s) for s in sample).split(\"0\")\n",
     "one_runs = [len(r) for r in runs if r]\n",
     "print(f\"\\nRuns of 1s: {one_runs}\")\n",
     "print(f\"All even? {all(r % 2 == 0 for r in one_runs)}\")"
@@ -164,8 +215,10 @@
     "print(\"=== Even Process ===\")\n",
     "print(f\"{'Metric':<25} {'True':>10} {'Inferred':>10}\")\n",
     "print(\"-\" * 47)\n",
-    "print(f\"{'States':<25} {true_even.state_count:>10} {inferred_even.state_count:>10}\")\n",
-    "print(f\"{'Statistical Complexity':<25} {true_even.statistical_complexity:>10.4f} {inferred_even.statistical_complexity:>10.4f}\")\n",
+    "print(f\"{'States':<25} {true_even.num_states:>10} {inferred_even.num_states:>10}\")\n",
+    "print(\n",
+    "    f\"{'Statistical Complexity':<25} {true_even.statistical_complexity:>10.4f} {inferred_even.statistical_complexity:>10.4f}\"\n",
+    ")\n",
     "print(f\"{'Entropy Rate':<25} {true_even.entropy_rate:>10.4f} {inferred_even.entropy_rate:>10.4f}\")"
    ]
   },
@@ -194,7 +247,7 @@
     "\n",
     "# Analyze\n",
     "true_periodic = analyze(periodic.true_machine)\n",
-    "print(f\"\\nStates: {true_periodic.state_count}\")\n",
+    "print(f\"\\nStates: {true_periodic.num_states}\")\n",
     "print(f\"Entropy rate: {true_periodic.entropy_rate:.4f} (should be 0 - deterministic!)\")\n",
     "print(f\"Statistical complexity: {true_periodic.statistical_complexity:.4f} bits\")"
    ]
@@ -222,11 +275,11 @@
     "sample = list(itertools.islice(coin, 30))\n",
     "print(\"Biased coin (p=0.7):\")\n",
     "print(\"\".join(str(s) for s in sample))\n",
-    "print(f\"Fraction of 1s: {sum(sample)/len(sample):.2f}\")\n",
+    "print(f\"Fraction of 1s: {sum(sample) / len(sample):.2f}\")\n",
     "\n",
     "# Analyze\n",
     "true_coin = analyze(coin.true_machine)\n",
-    "print(f\"\\nStates: {true_coin.state_count} (minimal!)\")\n",
+    "print(f\"\\nStates: {true_coin.num_states} (minimal!)\")\n",
     "print(f\"Statistical complexity: {true_coin.statistical_complexity:.4f} bits\")\n",
     "print(f\"Entropy rate: {true_coin.entropy_rate:.4f} bits/symbol\")"
    ]
@@ -260,7 +313,9 @@
     "print(f\"{'Process':<20} {'States':>8} {'Cμ (bits)':>12} {'hμ (bits)':>12}\")\n",
     "print(\"-\" * 70)\n",
     "for name, summary in processes:\n",
-    "    print(f\"{name:<20} {summary.state_count:>8} {summary.statistical_complexity:>12.4f} {summary.entropy_rate:>12.4f}\")\n",
+    "    print(\n",
+    "        f\"{name:<20} {summary.num_states:>8} {summary.statistical_complexity:>12.4f} {summary.entropy_rate:>12.4f}\"\n",
+    "    )\n",
     "print(\"=\" * 70)\n",
     "print(\"\\nKey insights:\")\n",
     "print(\"• Biased Coin: 1 state, no structure (IID)\")\n",
@@ -292,13 +347,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
