--- a/notebooks/demo_inference.ipynb
+++ b/notebooks/demo_inference.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample sequence (first 50 symbols):\n",
+      "10000101010000010001010010100101000100001010101010\n",
+      "\n",
+      "Notice: no '11' patterns!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a Golden Mean source\n",
     "golden_mean = GoldenMeanSource(p=0.5, _seed=42)\n",
@@ -60,9 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRUE Golden Mean Machine ===\n",
+      "States: 2\n",
+      "Statistical Complexity (Cμ): 0.9183 bits\n",
+      "Entropy Rate (hμ): 0.6667 bits/symbol\n",
+      "Excess Entropy (E): 0.9183 bits\n"
+     ]
+    }
+   ],
    "source": [
     "# Analyze the TRUE machine\n",
     "true_machine = golden_mean.true_machine\n",
@@ -77,9 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inferred machine has 5 states\n",
+      "Training sequence length: 10000\n",
+      "Converged: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Infer the machine from a sequence using CSSR\n",
     "config = CSSRConfig(max_history=5, significance=0.05, min_count=10)\n",
@@ -100,9 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Comparison: True vs Inferred ===\n",
+      "Metric                          True   Inferred\n",
+      "-----------------------------------------------\n",
+      "States                             2          5\n",
+      "Statistical Complexity        0.9183     2.3219\n",
+      "Entropy Rate                  0.6667     0.7833\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare true vs inferred\n",
     "inferred_summary = analyze(inferred_machine)\n",
@@ -121,9 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== CSSR Inference Analysis ===\n",
+      "\n",
+      "True Golden Mean: 2 states\n",
+      "CSSR inferred:    3 states\n",
+      "Converged: True\n",
+      "\n",
+      "Inferred Machine Metrics:\n",
+      "  Statistical Complexity: 1.5850 bits\n",
+      "  Entropy Rate: 0.6401 bits/symbol\n",
+      "\n",
+      "True Machine Metrics:\n",
+      "  Statistical Complexity: 0.9183 bits\n",
+      "  Entropy Rate: 0.6667 bits/symbol\n",
+      "\n",
+      "📊 Observation: CSSR over-estimates states but captures similar entropy rate.\n",
+      "   This is a known limitation - the algorithm creates equivalent states\n",
+      "   that could be merged with additional post-processing.\n"
+     ]
+    }
+   ],
    "source": [
     "# Experiment: CSSR inference accuracy\n",
     "print(\"=== CSSR Inference Analysis ===\\n\")\n",
@@ -168,9 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample sequence:\n",
+      "11000111111000011001111011110111100110001111111111\n",
+      "\n",
+      "Runs of 1s: [2, 6, 2, 4, 4, 4, 2, 10]\n",
+      "All even? True\n"
+     ]
+    }
+   ],
    "source": [
     "# Even Process\n",
     "even_process = EvenProcessSource(p=0.5, _seed=42)\n",
@@ -189,9 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Even Process ===\n",
+      "Metric                          True   Inferred\n",
+      "-----------------------------------------------\n",
+      "States                             2          4\n",
+      "Statistical Complexity        0.9183     2.0000\n",
+      "Entropy Rate                  0.6667     0.6801\n"
+     ]
+    }
+   ],
    "source": [
     "# Analyze even process\n",
     "true_even = analyze(even_process.true_machine)\n",
@@ -224,9 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Periodic sequence: [0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]\n",
+      "\n",
+      "States: 3\n",
+      "Entropy rate: 0.0000 (should be 0 - deterministic!)\n",
+      "Statistical complexity: 1.5850 bits\n"
+     ]
+    }
+   ],
    "source": [
     "# Periodic process\n",
     "periodic = PeriodicSource(pattern=[0, 1, 2])\n",
@@ -254,9 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Biased coin (p=0.7):\n",
+      "111101011111111111010111011101\n",
+      "Fraction of 1s: 0.80\n",
+      "\n",
+      "States: 1 (minimal!)\n",
+      "Statistical complexity: -0.0000 bits\n",
+      "Entropy rate: 0.8813 bits/symbol\n"
+     ]
+    }
+   ],
    "source": [
     "# Biased coin\n",
     "coin = BiasedCoinSource(p=0.7, _seed=42)\n",
@@ -284,9 +406,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "COMPLEXITY COMPARISON (True Machines)\n",
+      "======================================================================\n",
+      "Process                States    Cμ (bits)    hμ (bits)\n",
+      "----------------------------------------------------------------------\n",
+      "Biased Coin                 1      -0.0000       0.8813\n",
+      "Golden Mean                 2       0.9183       0.6667\n",
+      "Even Process                2       0.9183       0.6667\n",
+      "Periodic (3)                3       1.5850       0.0000\n",
+      "======================================================================\n",
+      "\n",
+      "Key insights:\n",
+      "• Biased Coin: 1 state, no structure (IID)\n",
+      "• Golden Mean: 2 states encode 'just saw a 1' memory\n",
+      "• Even Process: 3 states track parity of 1-runs\n",
+      "• Periodic: States = period length, zero entropy (deterministic)\n"
+     ]
+    }
+   ],
    "source": [
     "# Summary comparison\n",
     "processes = [\n",
