Add post-merge state merging to CSSR
- Add post_merge and merge_significance config options
- Implement _post_merge_states for additional state minimization
- Update spec 004 with literature context and post-merge algorithm
- Add debug notebook for Even Process analysis
- Document finite-sample over-estimation as expected CSSR behavior

The Even Process correctly shows 4 states due to mixed history
contexts - this is expected per Shalizi & Crutchfield (2004).
Post-merge helps when states are statistically equivalent but
weren't merged during the main split/merge loop.

--- a/notebooks/debug_cssr_golden_mean.ipynb
+++ b/notebooks/debug_cssr_golden_mean.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "03377082",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bc68f591",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ec9f8f14",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "90882e91",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6707b32a",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
       "=== CSSR Algorithm Trace ===\n",
       "\n",
       "After initialization: 1 states\n",
-      "  S0: [(), (0,), (1,), (0, 0), (0, 1), (1, 0), (0, 0, 0), (0, 0, 1), (0, 1, 0), (1, 0, 0), (1, 0, 1)]\n"
+      "  S0: [(0,), (1,), (0, 0), (0, 1), (1, 0), (0, 0, 0), (0, 0, 1), (0, 1, 0), (1, 0, 0), (1, 0, 1)]\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "8ad3a6b2",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
       "\n",
       "After splitting: 2 states\n",
       "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S2: [(), (0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
+      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
      ]
     }
    ],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "f2beffa9",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
       "\n",
       "After merging: 2 states\n",
       "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S2: [(), (0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
+      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
      ]
     }
    ],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "23f8fc76",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,6 @@
       "  (1, 0, 1): P(0)=1.0000, P(1)=0.0000\n",
       "\n",
       "S2:\n",
-      "  (): P(0)=0.6645, P(1)=0.3355\n",
       "  (0,): P(0)=0.4950, P(1)=0.5050\n",
       "  (0, 0): P(0)=0.4843, P(1)=0.5157\n",
       "  (1, 0): P(0)=0.5054, P(1)=0.4946\n",
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "50941c9e",
    "metadata": {},
    "outputs": [
@@ -440,18 +439,15 @@
      "output_type": "stream",
      "text": [
       "=== Inferred Machine ===\n",
-      "Number of states: 3\n",
+      "Number of states: 2\n",
       "Expected entropy rate: 0.3333\n",
       "\n",
       "Transitions:\n",
-      "  State S4:\n",
-      "    --1 (p=0.336)--> S1\n",
-      "    --0 (p=0.664)--> S3\n",
       "  State S1:\n",
-      "    --0 (p=1.000)--> S3\n",
-      "  State S3:\n",
-      "    --1 (p=0.505)--> S1\n",
-      "    --0 (p=0.495)--> S3\n"
+      "    --0 (p=1.000)--> S2\n",
+      "  State S2:\n",
+      "    --0 (p=0.495)--> S2\n",
+      "    --1 (p=0.505)--> S1\n"
      ]
     }
    ],
@@ -476,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9bde2a5c",
    "metadata": {},
    "outputs": [
@@ -489,7 +485,6 @@
       "Initial: 1 states\n",
       "  Iter 1 after split: 2 states\n",
       "  Iter 1 after merge: 2 states\n",
-      "    (): S0 -> S2\n",
       "    (0,): S0 -> S2\n",
       "    (1,): S0 -> S1\n",
       "    (0, 0): S0 -> S2\n",
@@ -501,27 +496,16 @@
       "    (1, 0, 0): S0 -> S2\n",
       "    (1, 0, 1): S0 -> S1\n",
       "\n",
-      "  Iter 2 after split: 3 states\n",
-      "  Iter 2 after merge: 3 states\n",
-      "    (): S2 -> S4\n",
-      "    (0,): S2 -> S3\n",
-      "    (0, 0): S2 -> S3\n",
-      "    (1, 0): S2 -> S3\n",
-      "    (0, 0, 0): S2 -> S3\n",
-      "    (0, 1, 0): S2 -> S3\n",
-      "    (1, 0, 0): S2 -> S3\n",
+      "  Iter 2 after split: 2 states\n",
+      "  Iter 2 after merge: 2 states\n",
       "\n",
-      "  Iter 3 after split: 3 states\n",
-      "  Iter 3 after merge: 3 states\n",
+      "Converged at iteration 2!\n",
       "\n",
-      "Converged at iteration 3!\n",
+      "Final partition: 2 states\n",
       "\n",
-      "Final partition: 3 states\n",
-      "\n",
-      "Final state assignments: 3 states\n",
+      "Final state assignments: 2 states\n",
       "  S1: [(1,), (0, 1), (0, 0, 1), (1, 0, 1)]\n",
-      "  S3: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n",
-      "  S4: [()]\n"
+      "  S2: [(0,), (0, 0), (1, 0), (0, 0, 0), (0, 1, 0), (1, 0, 0)]\n"
      ]
     }
    ],
@@ -568,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "9c47e466",
    "metadata": {},
    "outputs": [
@@ -662,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7358cf2d",
    "metadata": {},
    "outputs": [
@@ -738,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f9c4ad08",
    "metadata": {},
    "outputs": [
@@ -770,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "7cdc5180",
    "metadata": {},
    "outputs": [
@@ -779,17 +763,17 @@
      "output_type": "stream",
      "text": [
       "From inferred machine:\n",
-      "  State A (S4): P(1) = 0.3355\n",
+      "  State A (S2): P(1) = 0.5051\n",
       "\n",
       "Stationary distribution:\n",
-      "  pi_A = 0.7488\n",
-      "  pi_B = 0.2512\n",
+      "  pi_A = 0.6644\n",
+      "  pi_B = 0.3356\n",
       "\n",
       "State entropies:\n",
-      "  H(A) = 0.9205\n",
+      "  H(A) = 0.9999\n",
       "  H(B) = 0.0000\n",
       "\n",
-      "Manual entropy rate: 0.6892\n",
+      "Manual entropy rate: 0.6644\n",
       "Expected: 0.6667\n"
      ]
     }
@@ -844,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "04f2bfdc",
    "metadata": {},
    "outputs": [
@@ -853,11 +837,11 @@
      "output_type": "stream",
      "text": [
       "Analysis summary:\n",
-      "  Entropy rate (from analyze): 0.6401\n",
-      "  Manual calculation: 0.6892\n",
+      "  Entropy rate (from analyze): 0.6644\n",
+      "  Manual calculation: 0.6644\n",
       "  Expected: 0.6667\n",
-      "  Number of states: 3\n",
-      "  Statistical complexity: 1.5850\n"
+      "  Number of states: 2\n",
+      "  Statistical complexity: 0.9205\n"
      ]
     }
    ],
@@ -896,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "62bcd93d",
    "metadata": {},
    "outputs": [
@@ -906,19 +890,16 @@
      "text": [
       "=== Final Verification ===\n",
       "\n",
-      "Number of states: 3 (expected: 2)\n",
+      "Number of states: 2 (expected: 2)\n",
       "\n",
       "Machine structure:\n",
-      "  S4:\n",
-      "    --1 (p=0.3355)--> S1\n",
-      "    --0 (p=0.6645)--> S3\n",
       "  S1:\n",
-      "    --0 (p=1.0000)--> S3\n",
-      "  S3:\n",
+      "    --0 (p=1.0000)--> S2\n",
+      "  S2:\n",
+      "    --0 (p=0.4949)--> S2\n",
       "    --1 (p=0.5051)--> S1\n",
-      "    --0 (p=0.4949)--> S3\n",
       "\n",
-      "Entropy rate: 0.6401\n",
+      "Entropy rate: 0.6644\n",
       "Expected: 0.6667\n",
       "Match: True\n"
      ]
@@ -957,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5931ffc0",
    "metadata": {},
    "outputs": [
@@ -1029,19 +1010,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "e7bbc67a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Detailed chi-squared analysis using scipy\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m stats \u001b[38;5;28;01mas\u001b[39;00m scipy_stats\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdetailed_chi_squared\u001b[39m(tree, h1, h2):\n\u001b[32m      6\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Detailed chi-squared analysis.\"\"\"\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'scipy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Detailed Chi-Squared Tests ===\n",
+      "\n",
+      "(0,) vs (1, 0):\n",
+      "  (0,): {0: 3288, 1: 3355} (total: 6643)\n",
+      "  (1, 0): {0: 1696, 1: 1660} (total: 3356)\n",
+      "  Contingency table: [[3288, 1696], [3355, 1660]]\n",
+      "  Chi2=0.9246, p-value=0.336258, dof=1\n",
+      "  Same distribution (α=0.05)? True\n",
+      "\n",
+      "(0,) vs (0, 0):\n",
+      "  (0,): {0: 3288, 1: 3355} (total: 6643)\n",
+      "  (0, 0): {0: 1592, 1: 1695} (total: 3287)\n",
+      "  Contingency table: [[3288, 1592], [3355, 1695]]\n",
+      "  Chi2=0.9512, p-value=0.329421, dof=1\n",
+      "  Same distribution (α=0.05)? True\n",
+      "\n",
+      "(1, 0) vs (0, 0):\n",
+      "  (1, 0): {0: 1696, 1: 1660} (total: 3356)\n",
+      "  (0, 0): {0: 1592, 1: 1695} (total: 3287)\n",
+      "  Contingency table: [[1696, 1592], [1660, 1695]]\n",
+      "  Chi2=2.8548, p-value=0.091104, dof=1\n",
+      "  Same distribution (α=0.05)? True\n",
+      "\n",
+      "(1,) vs (0, 1):\n",
+      "  (1,): {0: 3356} (total: 3356)\n",
+      "  (0, 1): {0: 3355} (total: 3355)\n",
+      "  Contingency table: [[3356, 3355]]\n",
+      "  Chi2=0.0000, p-value=1.000000, dof=0\n",
+      "  Same distribution (α=0.05)? True\n"
      ]
     }
    ],
