--- a/notebooks/demo_inference.ipynb
+++ b/notebooks/demo_inference.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,38 @@
     "from emic.sources import GoldenMeanSource, EvenProcessSource, PeriodicSource, BiasedCoinSource\n",
     "from emic.inference import CSSR, CSSRConfig\n",
     "from emic.analysis import analyze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify kernel has updated CSSR code\n",
+    "import inspect\n",
+    "from emic.inference.cssr.algorithm import CSSR\n",
+    "\n",
+    "source = inspect.getsource(CSSR._initialize_partition)\n",
+    "has_fix = \"if len(history) == 0:\" in source\n",
+    "print(f\"Kernel has CSSR fix: {'✓ YES' if has_fix else '✗ NO (restart kernel!)'}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect\n",
+    "from emic.inference.cssr.algorithm import CSSR\n",
+    "\n",
+    "# Get the source of _initialize_partition and check for the fix\n",
+    "source = inspect.getsource(CSSR._initialize_partition)\n",
+    "if \"if len(history) == 0:\" in source:\n",
+    "    print(\"✓ CSSR has the fix (excludes empty history)\")\n",
+    "else:\n",
+    "    print(\"✗ CSSR does NOT have the fix\")"
    ]
   },
   {
@@ -44,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,21 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== TRUE Golden Mean Machine ===\n",
-      "States: 2\n",
-      "Statistical Complexity (Cμ): 0.9183 bits\n",
-      "Entropy Rate (hμ): 0.6667 bits/symbol\n",
-      "Excess Entropy (E): 0.9183 bits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Analyze the TRUE machine\n",
     "true_machine = golden_mean.true_machine\n",
@@ -100,26 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inferred machine has 5 states\n",
-      "Training sequence length: 10000\n",
-      "Converged: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Infer the machine from a sequence using CSSR\n",
-    "config = CSSRConfig(max_history=5, significance=0.05, min_count=10)\n",
+    "# Note: Use stricter significance (0.001) to avoid spurious state splits from noise\n",
+    "config = CSSRConfig(max_history=5, significance=0.001, min_count=10)\n",
     "cssr = CSSR(config)\n",
     "\n",
     "# Generate training data\n",
-    "training_source = GoldenMeanSource(p=0.5, _seed=123)\n",
+    "training_source = GoldenMeanSource(p=0.5, _seed=42)\n",
     "training_data = list(itertools.islice(training_source, 10000))\n",
     "\n",
     "# Run inference\n",
@@ -133,23 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Comparison: True vs Inferred ===\n",
-      "Metric                          True   Inferred\n",
-      "-----------------------------------------------\n",
-      "States                             2          5\n",
-      "Statistical Complexity        0.9183     2.3219\n",
-      "Entropy Rate                  0.6667     0.7833\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compare true vs inferred\n",
     "inferred_summary = analyze(inferred_machine)\n",
@@ -168,33 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== CSSR Inference Analysis ===\n",
-      "\n",
-      "True Golden Mean: 2 states\n",
-      "CSSR inferred:    3 states\n",
-      "Converged: True\n",
-      "\n",
-      "Inferred Machine Metrics:\n",
-      "  Statistical Complexity: 1.5850 bits\n",
-      "  Entropy Rate: 0.6401 bits/symbol\n",
-      "\n",
-      "True Machine Metrics:\n",
-      "  Statistical Complexity: 0.9183 bits\n",
-      "  Entropy Rate: 0.6667 bits/symbol\n",
-      "\n",
-      "📊 Observation: CSSR over-estimates states but captures similar entropy rate.\n",
-      "   This is a known limitation - the algorithm creates equivalent states\n",
-      "   that could be merged with additional post-processing.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Experiment: CSSR inference accuracy\n",
     "print(\"=== CSSR Inference Analysis ===\\n\")\n",
@@ -239,21 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample sequence:\n",
-      "11000111111000011001111011110111100110001111111111\n",
-      "\n",
-      "Runs of 1s: [2, 6, 2, 4, 4, 4, 2, 10]\n",
-      "All even? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Even Process\n",
     "even_process = EvenProcessSource(p=0.5, _seed=42)\n",
@@ -272,22 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Even Process ===\n",
-      "Metric                          True   Inferred\n",
-      "-----------------------------------------------\n",
-      "States                             2          4\n",
-      "Statistical Complexity        0.9183     2.0000\n",
-      "Entropy Rate                  0.6667     0.6801\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Analyze even process\n",
     "true_even = analyze(even_process.true_machine)\n",
@@ -320,21 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Periodic sequence: [0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]\n",
-      "\n",
-      "States: 3\n",
-      "Entropy rate: 0.0000 (should be 0 - deterministic!)\n",
-      "Statistical complexity: 1.5850 bits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Periodic process\n",
     "periodic = PeriodicSource(pattern=[0, 1, 2])\n",
@@ -362,23 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Biased coin (p=0.7):\n",
-      "111101011111111111010111011101\n",
-      "Fraction of 1s: 0.80\n",
-      "\n",
-      "States: 1 (minimal!)\n",
-      "Statistical complexity: -0.0000 bits\n",
-      "Entropy rate: 0.8813 bits/symbol\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Biased coin\n",
     "coin = BiasedCoinSource(p=0.7, _seed=42)\n",
@@ -406,33 +328,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "======================================================================\n",
-      "COMPLEXITY COMPARISON (True Machines)\n",
-      "======================================================================\n",
-      "Process                States    Cμ (bits)    hμ (bits)\n",
-      "----------------------------------------------------------------------\n",
-      "Biased Coin                 1      -0.0000       0.8813\n",
-      "Golden Mean                 2       0.9183       0.6667\n",
-      "Even Process                2       0.9183       0.6667\n",
-      "Periodic (3)                3       1.5850       0.0000\n",
-      "======================================================================\n",
-      "\n",
-      "Key insights:\n",
-      "• Biased Coin: 1 state, no structure (IID)\n",
-      "• Golden Mean: 2 states encode 'just saw a 1' memory\n",
-      "• Even Process: 3 states track parity of 1-runs\n",
-      "• Periodic: States = period length, zero entropy (deterministic)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Summary comparison\n",
     "processes = [\n",
@@ -482,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "emic",
    "language": "python",
    "name": "python3"
   },
